dev/k8s/rekor-server.yaml
#
# Copyright 2021 The Sigstore Authors.
#
# Licensed under the Apache License, Version 2.0 (the "License");
# you may not use this file except in compliance with the License.
# You may obtain a copy of the License at
#
#     http://www.apache.org/licenses/LICENSE-2.0
#
# Unless required by applicable law or agreed to in writing, software
# distributed under the License is distributed on an "AS IS" BASIS,
# WITHOUT WARRANTIES OR CONDITIONS OF ANY KIND, either express or implied.
# See the License for the specific language governing permissions and
# limitations under the License.

apiVersion: apps/v1
kind: Deployment
metadata:
  name: rekor-server
  labels:
    app: rekor-server
spec:
  replicas: 1
  selector:
    matchLabels:
      app: rekor-server
  template:
    metadata:
      labels:
        app: rekor-server
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/path: /metrics
        prometheus.io/port: "2112"
    spec:
      restartPolicy: Always
      containers:
      - name: rekor-server
        image: skaffold-dev:34751/rekor
        ports:
        - containerPort: 3000
        - containerPort: 2112 # metrics
        args: [
          "serve",
          "--trillian_log_server.address=logserver-service",
          "--trillian_log_server.port=8080",
          "--rekor_server.address=0.0.0.0",
          "--redis_server.address=redis",
          "--redis_server.port=6379",
          "--rekor_server.signer=memory",
          "--enable_attestation_storage",
          "--attestation_storage_bucket=file:///attestations",
        ]
        volumeMounts:
        - name: rekor-data
          mountPath: /attestations
      volumes:
      - name: rekor-data
        emptyDir: {}
---
apiVersion: v1
kind: Service
metadata:
  name: rekor-server
spec:
  selector:
    app: rekor-server
  type: LoadBalancer
  ports:
    - protocol: TCP
      port: 8077
      targetPort: 3000
      nodePort: 30331
---
